Closed Bug 921888 Opened 12 years ago Closed 11 years ago

insanity::pkix nullptr workaround for GCC breaks clang build

Categories

(Core :: Security: PSM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30
Tracking Status
firefox29 --- fixed
firefox30 --- fixed

People

(Reporter: briansmith, Assigned: briansmith)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #921887 +++ +++ This bug was initially created as a clone of Bug #878932 +++ clang defines __GNUC__ and so we erroneously #define nullptr __null on clang, which breaks the build.
No longer depends on: 921887
Comment on attachment 812893 [details] [diff] [review] nullptr-bug-921888.patch Review of attachment 812893 [details] [diff] [review]: ----------------------------------------------------------------- Clang is just silly.
Attachment #812893 - Flags: review?(cviecco) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Comment on attachment 812893 [details] [diff] [review] nullptr-bug-921888.patch [Approval Request Comment] See bug 878932 comment 37.
Attachment #812893 - Flags: approval-mozilla-aurora?
Comment on attachment 812893 [details] [diff] [review] nullptr-bug-921888.patch Uplifted granted to the patches relative to the new feature: "Add insanity::pkix as certificate verification option" Lukas and I discussed with Brian and we think it is important to have this feature for 29 (but disabled by default). It is early in the aurora process and they have plenty of tests for these feature (and to make sure that the current behaviors are still performing correctly).
Attachment #812893 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: