Bug 921888: Fix nullptr workaround to work with clang, r=cviecco

--HG--
extra : rebase_source : 39e8badba1865a695bca49b2fbd4b266c804f361
extra : source : 259e4540e192da66a2ec5cdd26dfc43d506c51c6