security/insanity/include/insanity/ScopedPtr.h
@@ -18,12 +18,7 @@
 #ifndef insanity_pkix__ScopedPtr_h
 #define insanity_pkix__ScopedPtr_h
 
-// GCC does not understand nullptr until 4.6
-#ifdef __GNUC__
-#if __GNUC__ * 100 + __GNUC_MINOR__ < 406
-  #define nullptr __null
-#endif
-#endif
+#include "insanity/nullptr.h"
 
 namespace insanity { namespace pkix {
 
